...
      animation: animation,
      builder: (_, __) {
        return Container(
          width: width,
          height: height * 2,
          child: GestureDetector(
            key: Key('pokebola'),
            onTap: addMyTeamPokemon,
            child: Transform.rotate(
              angle: animation.value,
              child: Stack(
                children: [
                  Column(
...
